--- a/ui/vdesc.ui
+++ b/ui/vdesc.ui
@@ -19,35 +19,49 @@
      <layout class="QHBoxLayout" name="horizontalLayout_2">
       <item>
        <layout class="QGridLayout" name="gridLayout_3">
-        <item row="2" column="0">
-         <widget class="QPushButton" name="changeTokenPb">
+        <item row="4" column="1">
+         <widget class="QSpinBox" name="spinBox">
+          <property name="value">
+           <number>20</number>
+          </property>
+         </widget>
+        </item>
+        <item row="4" column="0">
+         <widget class="QLabel" name="label">
           <property name="text">
-           <string>Сменить токен</string>
+           <string>Загружать диалогов:</string>
           </property>
          </widget>
         </item>
-        <item row="1" column="0">
-         <widget class="QLineEdit" name="nameEdit">
-          <property name="placeholderText">
-           <string>Здесь будет ваше имя</string>
-          </property>
-         </widget>
-        </item>
-        <item row="0" column="0">
-         <widget class="QLineEdit" name="tokenEdit">
-          <property name="placeholderText">
-           <string>Ваш токен для аутентификации</string>
-          </property>
-         </widget>
-        </item>
-        <item row="3" column="0">
+        <item row="3" column="0" colspan="2">
          <widget class="QPushButton" name="getFriendsPb">
           <property name="text">
            <string>Список друзей</string>
           </property>
          </widget>
         </item>
-        <item row="4" column="0">
+        <item row="2" column="0" colspan="2">
+         <widget class="QPushButton" name="changeTokenPb">
+          <property name="text">
+           <string>Сменить токен</string>
+          </property>
+         </widget>
+        </item>
+        <item row="1" column="0" colspan="2">
+         <widget class="QLineEdit" name="nameEdit">
+          <property name="placeholderText">
+           <string>Здесь будет ваше имя</string>
+          </property>
+         </widget>
+        </item>
+        <item row="0" column="0" colspan="2">
+         <widget class="QLineEdit" name="tokenEdit">
+          <property name="placeholderText">
+           <string>Ваш токен для аутентификации</string>
+          </property>
+         </widget>
+        </item>
+        <item row="5" column="0" colspan="2">
          <widget class="QPushButton" name="getMessagesPb">
           <property name="text">
            <string>Получить сообщения</string>
@@ -55,6 +69,19 @@
          </widget>
         </item>
        </layout>
+      </item>
+      <item>
+       <spacer name="horizontalSpacer">
+        <property name="orientation">
+         <enum>Qt::Horizontal</enum>
+        </property>
+        <property name="sizeHint" stdset="0">
+         <size>
+          <width>40</width>
+          <height>20</height>
+         </size>
+        </property>
+       </spacer>
       </item>
       <item>
        <widget class="QTabWidget" name="messagestabWidget">
