--- a/ui/vdesc.ui
+++ b/ui/vdesc.ui
@@ -19,31 +19,10 @@
      <layout class="QHBoxLayout" name="horizontalLayout_2">
       <item>
        <layout class="QGridLayout" name="gridLayout_3">
-        <item row="4" column="1">
-         <widget class="QSpinBox" name="spinBox">
-          <property name="value">
-           <number>20</number>
-          </property>
-         </widget>
-        </item>
-        <item row="4" column="0">
-         <widget class="QLabel" name="label">
-          <property name="text">
-           <string>Загружать диалогов:</string>
-          </property>
-         </widget>
-        </item>
-        <item row="3" column="0" colspan="2">
-         <widget class="QPushButton" name="getFriendsPb">
-          <property name="text">
-           <string>Список друзей</string>
-          </property>
-         </widget>
-        </item>
-        <item row="2" column="0" colspan="2">
-         <widget class="QPushButton" name="changeTokenPb">
-          <property name="text">
-           <string>Сменить токен</string>
+        <item row="0" column="0" colspan="2">
+         <widget class="QLineEdit" name="tokenEdit">
+          <property name="placeholderText">
+           <string>Ваш токен для аутентификации</string>
           </property>
          </widget>
         </item>
@@ -54,48 +33,83 @@
           </property>
          </widget>
         </item>
-        <item row="0" column="0" colspan="2">
-         <widget class="QLineEdit" name="tokenEdit">
-          <property name="placeholderText">
-           <string>Ваш токен для аутентификации</string>
+        <item row="2" column="0" colspan="2">
+         <widget class="QPushButton" name="changeTokenPb">
+          <property name="text">
+           <string>Сменить токен</string>
           </property>
          </widget>
         </item>
-        <item row="5" column="0" colspan="2">
-         <widget class="QPushButton" name="getMessagesPb">
-          <property name="text">
-           <string>Получить сообщения</string>
+        <item row="3" column="0">
+         <spacer name="verticalSpacer">
+          <property name="orientation">
+           <enum>Qt::Vertical</enum>
           </property>
-         </widget>
+          <property name="sizeHint" stdset="0">
+           <size>
+            <width>20</width>
+            <height>40</height>
+           </size>
+          </property>
+         </spacer>
         </item>
        </layout>
       </item>
       <item>
-       <spacer name="horizontalSpacer">
-        <property name="orientation">
-         <enum>Qt::Horizontal</enum>
-        </property>
-        <property name="sizeHint" stdset="0">
-         <size>
-          <width>40</width>
-          <height>20</height>
-         </size>
-        </property>
-       </spacer>
-      </item>
-      <item>
        <widget class="QTabWidget" name="messagestabWidget">
         <property name="currentIndex">
-         <number>1</number>
+         <number>0</number>
         </property>
         <widget class="QWidget" name="tab_2">
          <attribute name="title">
           <string>Друзья</string>
          </attribute>
-         <layout class="QHBoxLayout" name="horizontalLayout_3">
+         <layout class="QHBoxLayout" name="horizontalLayout">
           <item>
-           <layout class="QHBoxLayout" name="horizontalLayout">
-            <item>
+           <layout class="QGridLayout" name="gridLayout_5">
+            <item row="0" column="0">
+             <layout class="QGridLayout" name="gridLayout_2">
+              <item row="5" column="0">
+               <widget class="QPushButton" name="sendMessagePb">
+                <property name="text">
+                 <string>Отправить сообщение -&gt;</string>
+                </property>
+               </widget>
+              </item>
+              <item row="4" column="0" colspan="2">
+               <widget class="QLineEdit" name="messageInput">
+                <property name="placeholderText">
+                 <string>Введите текст сообщения</string>
+                </property>
+               </widget>
+              </item>
+              <item row="5" column="1">
+               <spacer name="horizontalSpacer">
+                <property name="orientation">
+                 <enum>Qt::Horizontal</enum>
+                </property>
+                <property name="sizeHint" stdset="0">
+                 <size>
+                  <width>40</width>
+                  <height>20</height>
+                 </size>
+                </property>
+               </spacer>
+              </item>
+              <item row="3" column="0" colspan="2">
+               <widget class="QTextEdit" name="history">
+                <property name="placeholderText">
+                 <string>Здесь будет отображаться история</string>
+                </property>
+               </widget>
+              </item>
+             </layout>
+            </item>
+           </layout>
+          </item>
+          <item>
+           <layout class="QGridLayout" name="gridLayout_4">
+            <item row="0" column="0">
              <widget class="QTabWidget" name="friendsTabWidget">
               <property name="currentIndex">
                <number>0</number>
@@ -107,27 +121,6 @@
                <layout class="QVBoxLayout" name="verticalLayout_4">
                 <item>
                  <widget class="QListWidget" name="friendsOnline"/>
-                </item>
-                <item>
-                 <widget class="QLineEdit" name="messageInput">
-                  <property name="placeholderText">
-                   <string>Введите текст сообщения</string>
-                  </property>
-                 </widget>
-                </item>
-                <item>
-                 <widget class="QPushButton" name="sendMessagePb">
-                  <property name="text">
-                   <string>Отправить сообщение -&gt;</string>
-                  </property>
-                 </widget>
-                </item>
-                <item>
-                 <widget class="QTextEdit" name="history">
-                  <property name="placeholderText">
-                   <string>Здесь будет отображаться история</string>
-                  </property>
-                 </widget>
                 </item>
                </layout>
               </widget>
@@ -143,17 +136,54 @@
               </widget>
              </widget>
             </item>
+            <item row="1" column="0">
+             <widget class="QPushButton" name="getFriendsPb">
+              <property name="text">
+               <string>Список друзей</string>
+              </property>
+             </widget>
+            </item>
            </layout>
           </item>
          </layout>
+         <zorder>history</zorder>
+         <zorder>sendMessagePb</zorder>
+         <zorder>sendMessagePb</zorder>
+         <zorder>messageInput</zorder>
+         <zorder>getFriendsPb</zorder>
         </widget>
         <widget class="QWidget" name="tab">
          <attribute name="title">
           <string>Сообщения</string>
          </attribute>
-         <layout class="QHBoxLayout" name="horizontalLayout_4">
+         <layout class="QVBoxLayout" name="verticalLayout">
           <item>
-           <widget class="QListWidget" name="messages"/>
+           <layout class="QGridLayout" name="gridLayout">
+            <item row="2" column="2">
+             <widget class="QPushButton" name="getMessagesPb">
+              <property name="text">
+               <string>Получить сообщения</string>
+              </property>
+             </widget>
+            </item>
+            <item row="2" column="0">
+             <widget class="QLabel" name="label">
+              <property name="text">
+               <string>Загружать диалогов:</string>
+              </property>
+             </widget>
+            </item>
+            <item row="2" column="1">
+             <widget class="QSpinBox" name="spinBox">
+              <property name="value">
+               <number>20</number>
+              </property>
+             </widget>
+            </item>
+            <item row="0" column="0" colspan="3">
+             <widget class="QListWidget" name="messages"/>
+            </item>
+           </layout>
           </item>
          </layout>
         </widget>
