--- a/ui/vdesc.ui
+++ b/ui/vdesc.ui
@@ -22,7 +22,7 @@
         <item row="0" column="0" colspan="2">
          <widget class="QLineEdit" name="tokenEdit">
           <property name="placeholderText">
-           <string>Ваш токен для аутентификации</string>
+           <string>auth token</string>
           </property>
          </widget>
         </item>
@@ -49,7 +49,7 @@
         <item row="1" column="0" colspan="2">
          <widget class="QLineEdit" name="nameEdit">
           <property name="placeholderText">
-           <string>Здесь будет ваше имя</string>
+           <string>Your name here</string>
           </property>
          </widget>
         </item>
